# xsdata-ech

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-pr.yaml  python-publish.yaml  python-tox.yaml
src/xsdata_ech/: e_ch_0006_2_0.py  e_ch_0007_6_0.py  e_ch_0008_3_0.py  e_ch_0010_6_0.py  e_ch_0044_4_1.py  e_ch_0058_5_0.py  e_ch_0155_5_0.py  e_ch_0155_5_2.py  e_ch_0157_5_0.py  e_ch_0159_5_0.py  e_ch_0252_1_0.py  e_ch_0252_2_0.py
tests/: test_ech_0159.py  test_ech_0252.py  test_ech_0252_1.py  test_ech_0252_2_majorz_information.py  test_ech_0252_2_majorz_result.py  test_ech_0252_2_proporz_information.py  test_ech_0252_2_proporz_result.py  test_ech_0252_2_vote.py
xsd/: eCH-0155-5-0.xsd  eCH-0155-5-2.xsd  eCH-0157-5-0.xsd  eCH-0159-5-0.xsd  eCH-0252-1-0.xsd  eCH-0252-2-0.xsd
