[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests"
implicit_reexport = true

[tool.bandit]
exclude_dirs = [
    "tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37,py38,py39,py310,lint,bandit,mypy

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310,lint,bandit,mypy

[testenv]
deps =
    pytest>=2.8.0
commands = py.test

[testenv:lint]
basepython = python3.10
deps =
    flake8
commands = flake8 src/ tests/

[testenv:mypy]
basepython = python3.10
deps =
    mypy
    pytest>=7
commands = mypy src tests

[testenv:bandit]
basepython = python3.10
deps =
    bandit[toml]
commands = bandit -c pyproject.toml -r src/
"""
