[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "xsdata_ech.*"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests"
implicit_reexport = true

[tool.bandit]
exclude_dirs = [
    "tests",
]
