[metadata]
name = xsdata-ech
version = 0.0.1
description = Python interface for the Swisscom All-in Signing Service
long_description = file: README.md, HISTORY.md
license = MIT
author = Seantis GmbH
author_email = info@seantis.ch
maintainer = Seantis GmbH
maintainer_email = info@seantis.ch
url = https://pypi.python.org/pypi/xsdata-ech
project_urls =
    Bug Tracker = https://pypi.python.org/pypi/AIS2.py/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    xsdata

[options.extras_require]
test =
    pytest

[options.package_data]
* =
    *.md
    HISTORY.rst

[bdist_wheel]
universal=1
