[metadata]
name = xsdata-ech
version = attr: xsdata_ech.VERSION
author = Seantis GmbH
author_email = info@seantis.ch
description = eCH xsdata dataclasses
long_description = file: README.md, HISTORY.md, LICENSE
license = MIT
url = https://github.com/seantis/xsdata-ech
project_urls =
    Bug Tracker = https://github.com/seantis/xsdata-ech/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    xsdata

[options.extras_require]
test =
    pytest

[options.package_data]
* =
    *.md
    LICENSE

[options.packages.find]
where=src

[bdist_wheel]
universal=1
